--- a/src/index.css
+++ b/src/index.css
@@ -1,40 +1,79 @@
-/* body {
+:root{
+  --primary:#d81e5b;
+  --secandary: #8c38ff;
+  --dark: #131a26;
+  --light: #eee;
+}
+
+*{
+  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  box-sizing: border-box;
+ font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-} */
-@import url("https://fonts.googleapis.com/css2?family=Montserrat+Alternates&display=swap");
-.bg {
-  color: red;
+body{
+  background-color: var(--light);
 }
-
-:root {
-  --bg-color:#131722;
-  --font-family: "Montserrat Alternates", sans-serif;
-  --light-bg:#24baef;
-  --font-color:#fff;
+.App{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 16px;
+  height: 100vh;
 }
-
-body {
-  background-color: var(--bg-color);
-  font-family: var(--font-family);
-  color: var(--font-color);
+.calculater{
+  background-color: white;
+  border-radius: 20px;
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  -ms-border-radius: 20px;
+  -o-border-radius: 20px;
+  overflow: hidden;
+  box-shadow: 0px 2px 64px rgba(0, 0, 0, 0.2);
 }
-
-a {
-  color: red;
-  text-decoration: none;
+.display{
+  padding: 16px;
+  text-align: right;
+  background-color: var(--dark);
+  color: var(--light);
+  font-size: 40px;
+  font-weight: 300;
 }
-
-.myinput {
-  background-color: transparent;
-  color: red;
-}/*# sourceMappingURL=index.css.map */
+.display span{
+  color: var(--light);
+  font-size: 14px;
+  color: #888;
+}
+button{
+   appearance: none;
+  outline: none;
+  border: none;
+  color: white;
+  font-size: 20px;
+  padding: 16px;
+  cursor: pointer;
+  transition: 0.5s all;
+  -webkit-transition: 0.5s all;
+  -moz-transition: 0.5s all;
+  -ms-transition: 0.5s all;
+  -o-transition: 0.5s all;
+}
+button:hover{
+  opacity: 0.9;
+}
+.operators{
+  display: flex;
+}
+.operators button{
+  flex: 1 1 0%;
+  background-color: var(--primary);
+  font-weight: 700;
+}
+.digits{
+  display: flex;
+  flex-wrap: wrap;
+}
+.digits button{
+  flex: 1 1 33.3% ;
+  background-color: var(--dark);
+}
