--- a/src/index.css
+++ b/src/index.css
@@ -1,40 +1,85 @@
-/* body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+/* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Encode+Sans+Expanded:wght@300&display=swap');
+:root
+{
+    --main-color:#0aad0a;
+    --light-color:#f0f3f2;
+    --shadow: rgba(145,158,171,.2) 0px 2px 4px -1px,rgba(145,158,171,.14) 0px 4px 5px 0px,rgba(145,158,171,.12) 0px 1px 10px 0px;
+    --font-family:'Encode Sans Expanded', sans-serif;
+    --rating-color:#ffc908;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-} */
-@import url("https://fonts.googleapis.com/css2?family=Montserrat+Alternates&display=swap");
-.bg {
-  color: red;
+body{
+    font-family: var(--font-family) !important;
+}
+.rating-color
+{
+    color: var(--rating-color);
+}
+.brdr-main{
+    border:  1px solid var(--main-color);
+}
+.cursor-pointer
+{
+    cursor: pointer;
+}
+a , a:hover{
+    color: black;
+    text-decoration: none;
+}
+.product:hover
+{
+    box-shadow: var(--shadow);
+    border: solid 1px var(--main-color);
+}
+.product .btn 
+{
+    transition: transform 1s , opacity 1s;
+    transform: translateY(100%);
+    opacity: 0;
+}
+.product:hover .btn 
+{
+    opacity: 1;
+    transform: translateY(0%);
+
+}
+.font-sm
+{
+    font-size: 14px;
+}
+.text-main
+{
+    color: var(--main-color);
+}
+.bg-main
+{
+    background-color: var(--main-color) !important;
+}
+.bg-main-light 
+{
+    background-color: var(--light-color) !important;
+}
+.aspect-ratio{
+    aspect-ratio: 1/1 ;
+}
+.network{
+    padding: 20px;
+    position: fixed ;
+    bottom: 30px ;
+    left: 30px;
+    z-index: 0000;
+    box-shadow: var(--shadow);
+}
+.div-count{
+    width: 25px;
+    height: 25px;
+}
+.color-nav{
+    background-color: #f8f9fa;
 }
 
-:root {
-  --bg-color:#131722;
-  --font-family: "Montserrat Alternates", sans-serif;
-  --light-bg:#24baef;
-  --font-color:#fff;
-}
 
-body {
-  background-color: var(--bg-color);
-  font-family: var(--font-family);
-  color: var(--font-color);
+.color-footer{
+    background-color:#f0f3f2 ;
 }
-
-a {
-  color: red;
-  text-decoration: none;
-}
-
-.myinput {
-  background-color: transparent;
-  color: red;
-}/*# sourceMappingURL=index.css.map */
